# smart-custom

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backup/: base.py
backup/tools/: order_query.py  refund_request.py
docs/: homework_guide.md  report.md
src/: __init__.py
src/api/: __init__.py  chat_routes.py
src/core/: __init__.py  config.py
src/models/: __init__.py  chat_models.py
src/services/: __init__.py  basic_chat_service.py  chat_service.py  model_manager.py  plugin_manager.py
src/tools/: invoice_tool.py
src/utils/: __init__.py  logger.py
tests/: test_hot_update.py  test_invoice_plugin.py
tests/integration/: test_api.py
tests/unit/: test_basic_chat.py
